@@ -1,45 +1,29 @@
 package com.evalart.controller;
 
-import com.evalart.model.franquicia.Franquicia;
+import com.evalart.model.sucursal.SucursalesRepository;
 import com.evalart.model.franquicia.FranquiciaRepository;
 import com.evalart.model.producto.ProductoRepository;
-import com.evalart.model.producto.Productos;
+import com.evalart.model.franquicia.Franquicia;
 import com.evalart.model.sucursal.Sucursales;
-import com.evalart.model.sucursal.SucursalesRepository;
+import com.evalart.model.producto.Productos;
+
+import static org.junit.jupiter.api.Assertions.*;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
+
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
-import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
+import org.springframework.http.HttpStatus;
 
 import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.BDDMockito.willDoNothing;
-import static org.mockito.Mockito.*;
-
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
-
 public class ProductoControllerTests {
-
-    private static final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(ProductoControllerTests.class);
-
-    @Autowired
-    private MockMvc mockMvc;
 
     @Mock
     private ProductoRepository mockProductoRepository;
@@ -56,9 +40,6 @@ public class ProductoControllerTests {
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
-
-        mockMvc = MockMvcBuilders.standaloneSetup(productoController).build();
 
         mockProductoRepository = mock(ProductoRepository.class);
         mockFranquiciaRepository = mock(FranquiciaRepository.class);
@@ -77,7 +58,7 @@ public class ProductoControllerTests {
         Productos productos = new Productos();
         productos.setId(1L);
         sucursales.setProducto(new ArrayList<>());
-        franquicia.setSucursales(new ArrayList<>(Arrays.asList(sucursales)));
+        franquicia.setSucursales(new ArrayList<>(List.of(sucursales)));
         when(mockFranquiciaRepository.findById(1L)).thenReturn(java.util.Optional.of(franquicia));
         when(mockSucursalesRepository.findById(1L)).thenReturn(java.util.Optional.of(sucursales));
         when(mockProductoRepository.findById(1L)).thenReturn(java.util.Optional.of(productos));
@@ -95,7 +76,7 @@ public class ProductoControllerTests {
 
         ResponseEntity<Productos> response = productoController.addProducto(1L, 1L, productosResul);
 
-        assertEquals(200, response.getStatusCodeValue());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
 
         Productos productosBody = response.getBody();
         assertNotNull(productosBody);
@@ -116,12 +97,12 @@ public class ProductoControllerTests {
 
         Sucursales sucursalExistentes = new Sucursales();
         sucursalExistentes.setId(1L);
-        sucursalExistentes.setProducto(Arrays.asList(productosExistentes));
+        sucursalExistentes.setProducto(List.of(productosExistentes));
 
         Franquicia franquiciaExistente = new Franquicia();
         franquiciaExistente.setId(1L);
         franquiciaExistente.setNombre("McDonald's");
-        franquiciaExistente.setSucursales(Arrays.asList(sucursalExistentes));
+        franquiciaExistente.setSucursales(List.of(sucursalExistentes));
 
         when(mockFranquiciaRepository.findById(1L)).thenReturn(Optional.of(franquiciaExistente));
 
@@ -131,7 +112,7 @@ public class ProductoControllerTests {
 
         ResponseEntity<?> response = productoController.updateProductoInsucursal(1L, 1L, 1L, newProductoActualizar);
 
-        assertEquals(200, response.getStatusCodeValue());
+        assertEquals(HttpStatus.OK, response.getStatusCode());
 
         Productos productosBody = (Productos) response.getBody();
         assertNotNull(productosBody);
@@ -146,12 +127,11 @@ public class ProductoControllerTests {
 
     @Test
     public void testDeleteProductoFromSucursal() {
+
         //Creamos los objetos necesarios para el test
         Productos nuevoProducto = new Productos(1L, "Producto Name", 150, null);
         Sucursales nuevaSucursal = new Sucursales(1L, "Sucursal 1", List.of(nuevoProducto));
         Franquicia nuevaFranquicia = new Franquicia(1L, "McDonald's", List.of(nuevaSucursal));
-        //para verificar
-        log.info("FRANQUICIA: " + nuevaFranquicia);
 
         //buscamos los objetos en la base de datos
         when(mockFranquiciaRepository.findById(1L)).thenReturn(Optional.of(nuevaFranquicia));
@@ -175,31 +155,7 @@ public class ProductoControllerTests {
         assertTrue(productosEliminado.isEmpty());
 
     }
-
-
 }
 
 
-/*
-@Test
-    public void testDeleteProductoFromSucursal() throws Exception {
 
-        Productos nuevoProducto = new Productos(1L, "Producto Name", 150 , null);
-        Sucursales nuevaSucursal = new Sucursales(1L, "Sucursal 1", List.of(nuevoProducto));
-        Franquicia nuevaFranquicia = new Franquicia(1L, "McDonald's", List.of(nuevaSucursal));
-        log.info("FRANQUICIA: " + nuevaFranquicia);
-
-        given(mockFranquiciaRepository.findById(1L)).willReturn(Optional.of(nuevaFranquicia));
-        given(mockSucursalesRepository.findById(1L)).willReturn(Optional.of(nuevaSucursal));
-        given(mockProductoRepository.findById(1L)).willReturn(Optional.of(nuevoProducto));
-        willDoNothing().given(mockProductoRepository).deleteById(1L);
-
-        String url = "/producto/delete/frq/{franquiciaId}/suc/{sucursalId}/prod/{id}";
-        MvcResult result = mockMvc.perform(MockMvcRequestBuilders.delete(url, 1L, 1L, 1L)
-                        .accept(MediaType.APPLICATION_JSON))
-                .andDo(print()) // Imprime la request y response
-                .andExpect(status().isOk())
-                .andReturn();
-        System.out.println("URL usada: " + result.getRequest().getRequestURI());
-    }
-*/
